# heat-distribution

./: .gitignore  CMakeLists.txt  GIT.md  README.md  build.sh  clear.sh
initial/: INPUT.txt  INPUT_COMPLEX.txt  README.md  data_generation.py  data_generation_complex.py
modules/: CMakeLists.txt
modules/Kirill/Euler/: CMakeLists.txt  eiler.c  euler.c  euler_complex.c
modules/Kirill/RungeKutta/: CMakeLists.txt  rungekutta.c
modules/Kirill/SpMatrix/: CMakeLists.txt
modules/Kirill/SpMatrix/app/: CMakeLists.txt
modules/Kirill/SpMatrix/app/euler/: CMakeLists.txt  euler_sparse.c  euler_sparse.cpp  euler_sparse_comlex.c
modules/Kirill/SpMatrix/app/implicitEuler/: CMakeLists.txt  implicit_euler_sparse.c
modules/Kirill/SpMatrix/app/rungekutta/: CMakeLists.txt  rungekutta_sparse.c  rungekutta_sparse_complex.c
modules/Kirill/SpMatrix/include/: sp_mat.h
modules/Kirill/SpMatrix/src/: sp_mat.c
modules/Kirill/SpMatrix/test/: test_main.cpp  test_sparse_matrix.cpp
modules/Kirill/SparseMatrix/: CMakeLists.txt
modules/Kirill/SparseMatrix/app/: CMakeLists.txt  euler2.cpp  euler_sparse.cpp
modules/Kirill/SparseMatrix/app/euler/: euler_sparse.cpp
modules/Kirill/SparseMatrix/app/rungekutta/: CMakeLists.txt  rungekutta_sparse.c  rungekutta_sparse.cpp
modules/Kirill/SparseMatrix/include/: sparse_matrix.h
modules/Kirill/SparseMatrix/src/: CMakeLists.txt  sparse_matrix.c  sparse_matrix.cpp
modules/Kirill/SparseMatrix/test/: CMakeLists.txt  test_sparse_matrix.cpp
modules/Sergey/: CMakeLists.txt
modules/Sergey/Euler/: CMakeLists.txt
modules/Sergey/Euler/src/: main.cpp
modules/Sergey/Implicit/: CMakeLists.txt  main.cpp
modules/Sergey/JacobiMethod/: main.cpp
modules/Sergey/Runge–Kutt/: .gitignore  CMakeLists.txt
modules/Sergey/Runge–Kutt/src/: main.cpp
modules/Sergey/SparseMatrix/: .gitignore  CMakeLists.txt
modules/Sergey/SparseMatrix/src/: SparseMatrix.cpp  SparseMatrix.h  main.cpp  main_Euler.cpp  main_Runge.cpp
modules/Sergey/SparseMatrix_MPI/: CMakeLists.txt  SparseMatrix.cpp  SparseMatrix.h  main.cpp
modules/Sergey/SparseMatrix_MPI/app/: CMakeLists.txt  Euler.cpp
modules/Sergey/SparseMatrix_MPI/initial_test/: INPUT2.txt
modules/Sergey/SparseMatrix_MPI/src/: CMakeLists.txt  SparseMatrix.cpp
modules/Sveta/: Eiler.cpp  EulerCRS.c  OUTPUT_gonch.txt  RK.c  SvetaRKCRS.c
modules/Sveta/CRS/: crs.c  crs.h
modules/Кирилл/: CMakeLists.txt
modules/Кирилл/Eiler/: CMakeLists.txt  eiler.c
modules/Кирилл/RugeKutta/: CMakeLists.txt  rugekutta.c
modules/Кирилл/app/: CMakeLists.txt  main.cpp
modules/Кирилл/include/: euler.h  methods.h  rungekutta.h
modules/Кирилл/src/: CMakeLists.txt  euler.cpp  methods.cpp  rungekutta.cpp
result/: PetrovResult.txt  PetrovRungeKuttaResult.txt  README.md  fault.py  kirillEuler.txt  kirillEuler2.txt  kirillEulerComlplex.txt  kirillEulerSparse.txt  kirillImplicitEulerSparse.txt  kirillRungeKutta.txt  kirillRungeKuttaSparse.txt  sergeyEuler.txt  sergeyEulerSparse.txt  sergeyRungeSparse.txt  sergey_Runge.txt  svetaEuler.txt  svetaEulerCRS.txt  svetaRungeKutta.txt  svetaRungeSparse.txt
result/Kirill/: ImplicitEuler.txt  RungeKutt.txt  euler1D.txt  kirillEulerSparse.txt
result/Sergey/: Sergey_Euler1D.txt  Sergey_Implicit1D.txt  Sergey_Runge_Kutt1D.txt  Sergey_Sparse_Euler1D.txt  Sergey_Sparse_Euler_OUTPUT_old2.txt  Sergey_Sparse_Runge1D.txt
result/complex/: EulerSparse.txt  Im.txt  Re.txt  RungeSparse.txt
src/Кирилл/: CMakeLists.txt  main.c
sustainability study/: README.md  build_plots.py  plot.py
sustainability study/KEKUREKUS/Euler_/: OUTPUT_1.txt  OUTPUT_12.txt  OUTPUT_2.txt  OUTPUT_22.txt  OUTPUT_3.txt  OUTPUT_4.txt  OUTPUT_5.txt  OUTPUT_6.txt  OUTPUT_7.txt  OUTPUT_8.txt
sustainability study/KEKUREKUS/Jakobi_Euler/: Kekus_Implicitus  OUTPUT.txt  OUTPUT_JACOBI_.txt  OUTPUT_JACOBI_1.txt  OUTPUT_JACOBI_10.txt  OUTPUT_JACOBI_17.txt  OUTPUT_JACOBI_2.txt  OUTPUT_JACOBI_23.txt  OUTPUT_JACOBI_24.txt  OUTPUT_JACOBI_3.txt  OUTPUT_JACOBI_4.txt  OUTPUT_JACOBI_5.txt  OUTPUT_JACOBI_6.txt  OUTPUT_JACOBI_7.txt  OUTPUT_JACOBI_8.txt  OUTPUT_JACOBI_9.txt
sustainability study/KEKUREKUS/Kirill_Jakobi/: OUTPUT_JACOBI_11.txt  OUTPUT_JACOBI_12.txt  OUTPUT_JACOBI_13.txt  OUTPUT_JACOBI_14.txt  OUTPUT_JACOBI_15.txt  OUTPUT_JACOBI_16.txt  OUTPUT_JACOBI_17.txt  OUTPUT_JACOBI_18.txt  OUTPUT_JACOBI_19.txt  OUTPUT_JACOBI_20.txt  OUTPUT_JACOBI_21.txt  OUTPUT_JACOBI_22.txt  implicit_euler_SpMatrix  run.sh
sustainability study/KEKUREKUS/Runge–Kutt/: OUTPUT_Runge_1.txt  OUTPUT_Runge_16.txt  OUTPUT_Runge_2.txt  OUTPUT_Runge_20.txt  OUTPUT_Runge_3.txt  OUTPUT_Runge_4.txt  OUTPUT_Runge_5.txt  OUTPUT_Runge_6.txt  OUTPUT_Runge_7.txt  OUTPUT_Runge_8.txt
sustainability study/KEKUREKUS/Sergey_Euler_/: OUTPUT_10.txt  OUTPUT_17.txt  OUTPUT_18.txt  OUTPUT_19.txt  OUTPUT_20.txt  OUTPUT_21.txt  OUTPUT_23.txt  OUTPUT_24.txt  OUTPUT_25.txt  OUTPUT_9.txt  kekus  test.sh
sustainability study/KEKUREKUS/Sergey_Jakobi_Euler/: OUTPUT_JACOBI_11.txt  OUTPUT_JACOBI_12.txt  OUTPUT_JACOBI_13.txt  OUTPUT_JACOBI_14.txt  OUTPUT_JACOBI_15.txt  OUTPUT_JACOBI_16.txt  OUTPUT_JACOBI_18.2.txt  OUTPUT_JACOBI_18.4.txt  OUTPUT_JACOBI_18.6.txt  OUTPUT_JACOBI_18.8.txt  OUTPUT_JACOBI_18.txt  OUTPUT_JACOBI_19.2.txt  OUTPUT_JACOBI_19.4.txt  OUTPUT_JACOBI_19.6.txt  OUTPUT_JACOBI_19.8.txt  OUTPUT_JACOBI_19.txt  OUTPUT_JACOBI_20.txt  OUTPUT_JACOBI_21.txt  OUTPUT_JACOBI_22.txt  test.sh
sustainability study/KEKUREKUS/Sergey_Runge–Kutt/: OUTPUT_Runge_17.txt  OUTPUT_Runge_18.txt  OUTPUT_Runge_19.txt  OUTPUT_Runge_21.txt  OUTPUT_Runge_22.txt  OUTPUT_Runge_23.txt  OUTPUT_Runge_24.txt  OUTPUT_Runge_25.txt  kekus_Rungekus  test.sh
visualization/: 2D.py  3D.py  3DComplex.py  README.md  fault.py
